--- a/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
@@ -42,7 +42,9 @@
           {% endif %}
             data-timelimit="{{ context.watchTimeLimit|default('')}}"
             data-markerurl="{{ context.markerUrl|default('')}}"
+          {% if hideQuestion|default(0) == 1 %}
             data-question-markers='{{ render(controller('TopxiaWebBundle:QuestionMarker:showQuestionMakers', {mediaId: file.id})) }}'
+          {% endif %}
             data-starttime="{{ context.starttime|default('')}}"
             data-lesson-id="{{ context.lessonId|default(0)}}"
             style="height:100%"
