--- a/src/Topxia/WebBundle/Resources/views/Default/course-grid-with-condition-index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Default/course-grid-with-condition-index.html.twig
@@ -18,7 +18,7 @@
     </div>
     <div class="course-filter" id="course-filter">
       <ul class="nav nav-pills hidden-xs" role="tablist">
-        <li role="presentation" class="{% if (categoryId|default(0) == 0) %}active {% endif %} js-course-filter"data-url="{{path('homepage_category',{orderBy : orderBy|default('latest')}) }}"><a href="javascript:;">{{'全部课程'|trans}}</a></li>
+        <li role="presentation" class="{% if (categoryId|default(0) == 0) %}active {% endif %} js-course-filter" data-url="{{path('homepage_category',{orderBy : orderBy|default('latest')}) }}" data-type="course"><a href="javascript:;">{{'全部课程'|trans}}</a></li>
         {% if categoriesFirst%}
           {% for category in categoriesFirst  if (category.parentId == 0) %}
             {% if ( loop.index0 < config.categoryCount|default(4) ) %}
@@ -30,11 +30,11 @@
       <div class="btn-group visible-xs">
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">{{'全部课程'|trans}} <span class="caret"></span></button>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation" class="js-course-filter {% if (categoryId|default(0) == 0) %}active {% endif %}" data-url="{{path('homepage_category',{orderBy : orderBy|default('latest')}) }}"><a href="javascript:;">{{'全部课程'|trans}}</a></li>
+          <li role="presentation" class="js-course-filter {% if (categoryId|default(0) == 0) %}active {% endif %}" data-url="{{path('homepage_category',{orderBy : orderBy|default('latest')}) }}" data-type="course"><a href="javascript:;">{{'全部课程'|trans}}</a></li>
           {% if categoriesFirst%}
             {% for category in categoriesFirst  if (category.parentId == 0) %}
               {% if ( loop.index0 < config.categoryCount|default(4) ) %}
-                <li role="presentation" class = "js-course-filter {% if (categoryId|default(0) == category.id) %}active {% endif %}" data-url="{{path('homepage_category',{categoryId : category.id, orderBy : orderBy|default('latest')}) }}"><a href="javascript:;">{{ category.name }}</a></li>
+                <li role="presentation" class = "js-course-filter {% if (categoryId|default(0) == category.id) %}active {% endif %}" data-url="{{path('homepage_category',{categoryId : category.id, orderBy : orderBy|default('latest')}) }}" data-type="course"><a href="javascript:;">{{ category.name }}</a></li>
               {% endif %}
             {% endfor %}
           {% endif %}
