--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-header.html.twig
@@ -2,7 +2,9 @@
 {% do load_script('open-course/open-course-header') %}
 {% if course.type == 'open' %}
     <div class="col-md-9 open-course-views" data-get-recommend-course-url="{{ path('open_course_ad_modal_recommend_course', {id: course.id, num: 3}) }}">
-      {% include 'TopxiaWebBundle:OpenCourse:lesson-play.html.twig' %}
+      {% if lesson %}
+        {% include 'TopxiaWebBundle:OpenCourse:lesson-play.html.twig' %}
+      {% endif %}
       <div class="mask modal fade" id="open-course-ad-modal" tabindex="-1" role="dialog" aria-labelledby="openCourseADModal">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -19,25 +21,25 @@
                 <a href="" class="btn btn-lg share-btn dropdown-toggle mrm" data-toggle="dropdown">
                   <i class="es-icon es-icon-share prs"></i>{{'分享'|trans}}</a>
                 {% include 'TopxiaWebBundle:Common:share-dropdown.html.twig' with {type:'course'} %}
-                {% if nextLesson is not empty %}
+                {#{% if nextLesson is not empty %}
                   <a href="{{ path('open_course_lesson_learn', {'lessonId': nextLesson.id, 'courseId': course.id}) }}" class="btn btn-lg next-btn">
                     <i class="es-icon es-icon-arrowforward prs"></i>下一课
                   </a>
-                {% endif %}
+                {% endif %}#}
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="mask" style="display:none" id="media-error-dialog">
+      <div class="mask" {% if lesson %}style="display:none"{% endif %} id="media-error-dialog">
         <div class="modal-dialog" style="width:200px;margin:22% auto;">
           <div class="modal-content">
             <div class="modal-header" style="padding:5px 15px;">
               <h4 class="modal-title">提示</h4>
             </div>
             <div class="modal-body clearfix">
-              该课时资源文件被删除
+              {% if not lesson %}课时未发布{% else %}该课时资源文件被删除{% endif %}
             </div>
           </div>
         </div>
@@ -46,7 +48,21 @@
   {% elseif course.type == 'liveOpen' %}
     <div class="col-md-9 open-course-views">
       <img src="{{ filepath(course.largePicture, 'course.png')}}" class="img-responsive mask-img">
-      <div class="mask">
+      {% if lesson is empty or lesson.startTime is empty or lesson.endTime is empty %}
+        <div class="mask">
+          <div class="modal-dialog" style="width:200px;margin:22% auto;">
+            <div class="modal-content">
+              <div class="modal-header" style="padding:5px 15px;">
+                <h4 class="modal-title">提示</h4>
+              </div>
+              <div class="modal-body clearfix">
+                暂未发布直播
+              </div>
+            </div>
+          </div>
+        </div>
+      {% else %}
+        <div class="mask">
         {% if lesson.startTime > ("now"|date("U")) %}
           <div class="mask-content">
             <h2>{{'直播将于'|trans}}<span class="phm">{{ lesson.startTime|date('m') }}{{ '月'|trans }}{{ lesson.startTime|date('d') }}{{ '日'|trans }} {{ lesson.startTime|date('H:i') }}</span>{{'开始'|trans}}</h2>
@@ -93,7 +109,8 @@
             {% endfor %}
           </div>
         {% endif %}
-      </div>
+        </div>
+      {% endif %}
     </div>
   {% endif %}
 
