--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-header.html.twig
@@ -3,7 +3,7 @@
 {% do load_script('open-course/open-course-header') %}
 
 <div class="open-course-title open-course-mobile-title">
-  {{ lesson.title }}
+  {{ course.title }}
   <p><a href="{{ path('homepage') }}" target="_blank">{{ setting('site.name', 'EduSoho网校') }}</a></p>
 </div>
 <div class="open-course-mask  modal fade" id="open-course-ad-modal" tabindex="-1" role="dialog" aria-labelledby="openCourseADModal">
@@ -19,20 +19,21 @@
 </div>
 {% if course.type == 'open' %}
   <div class="open-course-views open-course-mobile-views" data-get-recommend-course-url="{{ path('open_course_ad_modal_recommend_course', {id: course.id, num: 3}) }}">
-    {% include 'TopxiaWebBundle:OpenCourse:lesson-play.html.twig' %}
-    <div class="open-course-mask" style="display:none" id="media-error-dialog">
+    {% if lesson %}
+      {% include 'TopxiaWebBundle:OpenCourse:lesson-play.html.twig' %}
+    {% endif %}
+    <div class="mask" {% if lesson %}style="display:none"{% endif %} id="media-error-dialog">
       <div class="modal-dialog" style="width:200px;margin:22% auto;">
         <div class="modal-content">
           <div class="modal-header" style="padding:5px 15px;">
             <h4 class="modal-title">提示</h4>
           </div>
           <div class="modal-body clearfix">
-            该课时资源文件被删除
+            {% if not lesson %}课时未发布{% else %}该课时资源文件被删除{% endif %}
           </div>
         </div>
       </div>
     </div>
-    
   </div>
 {% elseif course.type == 'liveOpen' %}
   <div class="open-course-views openCourse-wechat-views">
