--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Parts/referer-detail-list.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Parts/referer-detail-list.html.twig
@@ -2,13 +2,19 @@
 
 {% set showPaginator = showPaginator|default(1) %}
 {% set showRefererName = showRefererName|default(0) %}
-
-<table class="table table-hover" style="word-break:break-all;">
+<style type="text/css">
+.overflow-hidden{
+	height: 24px;
+    overflow: hidden;
+    display: inline-block;
+}
+</style>
+<table class="table table-hover" style="word-break:break-all;table-layout: fixed;">
 	<thead>
 		<tr>
-			<th width="40%">来源</th>
-			<th >来源数</th>
-			<th>占比</th>
+			<th width="50%">来源</th>
+			<th width="30%">来源数</th>
+			<th width="20%">占比</th>
 		{#	<th>购买转化数</th>
 			<th>购买转化率</th>#}
 		</tr>
@@ -18,7 +24,7 @@
 			<tr>
 				<th scope="row">
 					{% if showRefererName %}{{ refererlog.refererName }} {% else %}
-						<a class="pll" href="javascript:;" id="help" data-toggle="popover" data-trigger="click" data-placement="top" title="" data-html="true" data-content="<a>{{ refererlog.refererUrl }}</a>" data-original-title="访问地址:">{{refererlog.refererUrl}}/...</a>
+						<a   class="overflow-hidden" href="javascript:;" id="help" data-toggle="popover" data-trigger="click" data-placement="top" title="" data-html="true" data-content="<a>{{ refererlog.refererUrl }}</a>" data-original-title="访问地址:">{{refererlog.refererUrl}}</a>
 					{% endif %}
 				</th>
 				<th>{{refererlog.count}}</th>
