--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/index.html.twig
@@ -7,9 +7,9 @@
         <thead>
         <tr>
             <th width="35%">{{ '课程名称'|trans }}</th>
-            <th width="35%">{{ '购买转化数'|trans }}</th>
+            <th width="35%">{{ '购买数'|trans }}</th>
             <th>{{ '访问数'|trans }}</th>
-            <th>{{ '购买转化率'|trans }}</th>
+            <th>{{ '购买率'|trans }}</th>
             <th>{{ '详情'|trans }}</th>
         </tr>
         </thead>
