--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-teacher-block.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-teacher-block.html.twig
@@ -14,7 +14,7 @@
         <h4 class="mtl">{{ web_macro.user_link(teacher, '', false) }}</h4>
         <p class="color-gray">{{ teacher.title }}</p>
         <div class="intro" title="{{ userProfile.about|default(null)|raw }}">
-          {{ userProfile.about|default(null)|raw }}
+          {{ userProfile.about|default(null)|raw|plain_text(55) }}
         </div>
       {% endif %}
     {% else %}
