--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
@@ -15,7 +15,7 @@
 {% endblock %}
 {% block content %}
   <div class="open-course-list">
-    <div class="row course-list es-openCourse-list">
+    <div class="row course-list es-open-course-list">
       {% for course in courses if course %}
         {% set lessons = data('OpenCourseLessons',{courseId:course.id,count:1}) %}
         <div class="col-md-4 col-xs-6">
