--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -97,5 +97,5 @@
   </div>
 {% endif %}
 
-  <input type="hidden" id="admin-notice" value="{{ path('admin_modal_notice') }}" />
+  <input type="hidden" id="admin-notice" value="{{ path('admin_notice_modal') }}" />
 {% endblock %}
