--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/result-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/result-modal.html.twig
@@ -4,7 +4,7 @@
 {% set modal_class = 'modal-lg' %}
 
 {% block title %}
-  {{ course.title }}查询结果&nbsp;&nbsp;{{ app.request.get('startTime') }} - {{ app.request.get('endTime') }}
+  {{ course.title }}查询结果&nbsp;&nbsp;({{ app.request.get('startTime') }} 到 {{ app.request.get('endTime') }})
 {% endblock %}
 {% block body %}
   {% include 'TopxiaAdminBundle:OpenCourseAnalysis/Conversion:order-list.html.twig' %}
