--- a/src/Topxia/AdminBundle/Resources/views/Default/notice-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/notice-modal.html.twig
@@ -1,11 +1,14 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
 
 {% set modalSize = 'large' %}
-{% set modal_class = 'modal-lg' %}
+{% set modal_class = 'modal-reset' %}
 
 
 {% block body %}
   <style>
+  .modal-reset{
+    width: 468px;
+  }
   .modal-header{
     border-bottom: none;
     display: inline-block;
@@ -32,7 +35,51 @@
   }
   .modal-body img{
     width: 100%;
+    padding: 49px;
+  }
+  .modal-body .content{
+    padding-bottom: 40px;
+  }
+  .modal-body h1{
+    font-size: 26px;
+    color: #414141;
+    margin: 0;
+    line-height: 26px;
+    margin-bottom: 19px;
+  }
+  .modal-body p{
+    font-size: 18px;
+    color: #414141;
+    line-height: 18px;
+   margin-bottom: 28px;
+  }
+  .modal-body .btn-look{
+    padding: 22px 60px;
+    font-size: 22px;
+    color: #5555F9;
+    line-height: 22px;
+    border: 4px solid #5555F9;
+    border-radius: 20px;
+    display: inline-block;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;   
+  }
+  .modal-body .btn-look:hover{
+    text-decoration: none;
+    background-color: #5555F9;
+    color: #fff;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
   }
 </style>
-  <img class="img-responsive" src="{{asset('bundles/topxiaadmin/img/openCourse.jpg')}}">
+  <img class="img-responsive" src="{{asset('bundles/topxiaadmin/img/teacher_icon.png')}}">
+  <div class="content text-center">
+    <h1>EduSoho火热更新！</h1>
+    <p>7大功能助力网校Level up</p>
+    <a href="" class="btn-look">查看详情</a>
+  </div>
 {% endblock %}
