--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/member-sms-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/member-sms-modal.html.twig
@@ -23,29 +23,33 @@
           {% endif %}
            <div class="help-block"></div>
         </div>
-        <br/>
+      </div>
+
+      <div class = "form-group">
         <div class="controls row" >
           <div class = "col-md-2 col-md-offset-2" >
             <label class="control-label mtm" for="captcha_code">{{'图形验证码'|trans}} </label>
           </div>
-          <div class = "col-md-3  openCourse-form-control" >
+          <div class = "col-md-3  open-course-form-control" >
             <input type="text" class="form-control" id="captcha_code" name="captcha_code" maxlength="5" placeholder="{{'输入图形验证码'|trans}}" required="required"  data-url="{{path('register_captcha_check')}}" >
           </div>
-          <div class="col-md-3 openCourse-form-btn">
+          <div class="col-md-3 open-course-form-btn">
             <img src="{{ path('register_captcha_num') }}" data-url="{{ path('register_captcha_num') }}" id="getcode_num" title="{{'看不清，点击换一张'|trans}}" style="cursor:pointer;height:40px;width:100%">
            </span>
           </div>
           <div class="help-block"></div>
         </div>
-        <br>
+      </div>
+
+      <div class = "form-group">
         <div class="controls row" >
           <div class = "col-md-2 col-md-offset-2" >
             <label class="control-label mtm">{{'短信验证码'|trans}} </label>
           </div>
-          <div class = "col-md-3  openCourse-form-control" >
+          <div class = "col-md-3  open-course-form-control" >
             <input type="text" class="form-control" id="sms-code-modal" name="sms_code_modal"  required="required" placeholder="{{'输入短信验证码'|trans}}" data-url="{{path('edu_cloud_sms_check',{type:'system_remind'})}}">
           </div>
-          <div class="openCourse-form-btn">
+          <div class="open-course-form-btn">
             <span class="btn btn-default btn-md js-sms-send disabled" data-url="{{ path('edu_cloud_sms_send') }}">
               <span id="js-time-left"></span>
               <span id="js-fetch-btn-text">{{'获取短信验证码'|trans}}{# 秒后重新获取 #}</span>
