--- a/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_role_namage' %}
+{% set menu = 'admin_role_manage' %}
+
+{% set script_controller = 'permissionbundle/controller/role/index' %}
 
 {% block main %}
 
@@ -45,12 +47,9 @@
         <td>
           <div class="btn-group">
             <a href="#modal" data-toggle="modal" data-url="{{ path('admin_role_show', {id:role.id}) }}" data-url="" class="btn btn-default btn-sm">查看</a>
-            <a href="#" type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a href="#modal" data-toggle="modal" data-url="{{ path('admin_role_edit', {id:role.id}) }}">编辑</a></li>
-            </ul>
+            
+            {% include 'PermissionBundle:Templates:group-button.html.twig' with {parentCode: 'admin_role_manage', group:'groupBtn', role: role} %}
+
           </div>
         </td>
       </tr>
