--- a/src/Topxia/AdminBundle/Resources/views/Course/course-recommend-list.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/course-recommend-list.html.twig
@@ -2,7 +2,7 @@
 
 {% set script_controller = 'course/recommend-list' %}
 
-{% set menu = 'admin_course_recommend' %}
+{% set menu = 'admin_course_recommend_list' %}
 
 {% block main %}
   
