--- a/src/Topxia/AdminBundle/Resources/views/Coin/coin-model.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/coin-model.html.twig
@@ -1,16 +1,16 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_block_manage' %}
+{% set menu = 'admin_coin_settings' %}
 
 {% set script_controller = "coin/model" %}
 
 {% block main %}
- <ul class="nav nav-pills mbl small">
+  <ul class="nav nav-pills mbl small">
     <li>
-      <a href="{{ path('admin_block_visual_edit',{blockId:block.id}) }}">编辑</a>
+      <a href="{{path('admin_coin_settings')}}">虚拟币设置</a>
     </li>
     <li class="active">
-      <a href="{{ path('admin_block_visual_edit_history',{blockId:block.id}) }}">历史记录</a>
+      <a href="{{path('admin_coin_model')}}">使用方式</a>
     </li>
   </ul>
   {{ web_macro.flash_messages() }}
