--- a/src/Topxia/AdminBundle/Resources/views/Coin/coin-settings.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/coin-settings.html.twig
@@ -4,9 +4,9 @@
 {% set script_controller = "coin/range" %}
 
 {% block main %}
- <ul class="nav nav-pills mbl small">
+  <ul class="nav nav-pills mbl small">
     <li class="active">
-      <a href="{{path('admin_coin_model')}}">虚拟币设置</a>
+      <a href="{{path('admin_coin_settings')}}">虚拟币设置</a>
     </li>
     <li>
       <a href="{{path('admin_coin_model')}}">使用方式</a>
