--- a/src/Topxia/WebBundle/Resources/views/OpenCourseManage/student-login-list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourseManage/student-login-list.html.twig
@@ -1,12 +1,30 @@
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
-  
+
+<form class="form-inline well well-sm " action="{{ path('open_course_manage_students',{id:course.id}) }}" method="get" novalidate>
+  <div class="form-group col-md-7">
+    <input class="form-control " type="text" style="width:45%" placeholder="{{ '请输入用户名'|trans }}" name="keyword" value="{{ app.request.get('keyword') }}">
+
+    <input type="hidden" name="userType" value="login"/>
+
+    {% if setting('cloud_sms.sms_enabled') and (setting('cloud_sms.sms_live_play_one_day') == 'on' or setting('cloud_sms.sms_live_play_one_hour') == 'on') %}
+      <select class="form-control" name="isNotified">
+        {{ select_options({0:'全部学员', 1: '设置提醒的学员'}, app.request.get('isNotified')) }}
+      </select>&nbsp;&nbsp;
+    {% endif %}
+    <button class="btn btn-primary">{{ '搜索'|trans }}</button>
+  </div>
+  <div class="clearfix"></div>
+</form>
+
 <table class="table table-striped" id="course-student-list">
   <thead>
     <tr>
       <th width="30%">{% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% else %}{{'学员'|trans}}{% endif %}</th>
       <th width="20%">{{'最近进入'|trans}}</th>
       <th width="20%">{{'手机号'|trans}}</th>
-      <th>{{'是否报名'|trans}}</th>
+      {% if setting('cloud_sms.sms_enabled') and (setting('cloud_sms.sms_live_play_one_day') == 'on' or setting('cloud_sms.sms_live_play_one_hour') == 'on') %}
+        <th>{{'是否提醒'|trans}}</th>
+      {% endif %}
       <th>{{'操作'|trans}}</th>
     </tr>
   </thead>
@@ -25,7 +43,13 @@
         </td>
 
         <td style="vertical-align: middle;">{{ student.mobile }}</td>
-        <td style="vertical-align: middle;">{% if student.isNotified %}是{% endif %}</td>
+
+        {% if setting('cloud_sms.sms_enabled') and (setting('cloud_sms.sms_live_play_one_day') == 'on' or setting('cloud_sms.sms_live_play_one_hour') == 'on') %}
+          <td style="vertical-align: middle;">
+            {% if student.isNotified %}已设置提醒{% else %}未设置{% endif %}
+          </td>
+        {% endif %}
+        
         <td style="vertical-align: middle;">
           <div class="btn-group">
             {% if app.user.id != user.id %}
