--- a/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
@@ -1,10 +1,11 @@
 {% if setting('cloud_attachment.enable') and setting('cloud_attachment.' ~ targetType ) %}
+  {% do load_script('attachment/upload-form') %}
   <div class="form-group">
     <label class="col-xs-2 control-label" for="thread_title">{{ '附件'|trans }}</label>
     <div class="col-xs-7 col-xs-10 controls">
       <ul class="list-unstyled js-attachment-list">
         {% for attachment in attachments %}
-          <li>{{ attachment.file.filename }}</li>
+          <li>{{ attachment.file.filename }}<button class="btn btn-default js-attachment-delete" data-url="{{path('attachment_delete',{id:attachment.id})  }}" type="button">删除</button> </li>
         {% endfor %}
       </ul>
       <a class="btn btn-primary js-upload-file" data-toggle="modal" data-backdrop="static"
