--- a/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
@@ -9,12 +9,16 @@
 
   <div class="course-img">
     <a href="{{ course_show_url }}" target="_blank">
-      <span class="tags-left">
-        <span class="tag-live"></span>
-      </span>
-      <span class="tags-right">
-        <span class="tag-public"></span>
-      </span>
+      {% if course.type == 'live' or course.type == 'public_liveOpen' %}
+        <span class="tags-left">
+          <span class="tag-live"></span>
+        </span>
+      {% endif %}
+      {% if is_open_course %}
+        <span class="tags-right">
+          <span class="tag-public"></span>
+        </span>
+      {% endif %}
       <img class="img-responsive" src="{{ filepath(course.middlePicture, 'course.png') }}" alt="">
     </a>
   </div>
@@ -28,10 +32,10 @@
       </a>
     </h3>
     <div class="score">
-      {{ web_macro.star(course.rating|default(0)) }}
       {% if is_open_course %}
         <span>{{ course.studentNum|default(0) }}{{ '人学习'|trans }}</span>
       {% else %}
+        {{ web_macro.star(course.rating|default(0)) }}
         <span>{{ course.ratingNum|default(0) }}人评价({{ course.studentNum|default(0) }}{{ '人学习'|trans }})</span>
       {% endif %}
     </div>
