--- a/src/Topxia/WebBundle/Resources/views/CourseManage/teachers.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/teachers.html.twig
@@ -90,7 +90,7 @@
 
       {% if course.type in ['live','liveOpen'] %}
         <div class="help-block">
-          提示：排序第一位的老师默认为 <b>课堂管理员</b>，课堂管理员拥有 <b>课堂最高权限</b>
+          提示：排序第一位的老师默认为 <b>直播课堂管理员</b>，直播课堂管理员拥有 <b>直播课堂最高权限</b>
         </div>
       {% endif %}
       <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
