--- a/src/Topxia/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/layout.html.twig
@@ -121,7 +121,7 @@
 
               <div class="list-group">
                 {% for m in groupedMenus %}
-                {% set array = {'0':'admin_my_cloud','1':'admin_cloud_video_setting','2':'admin_setting_cloud','3':'admin_edu_cloud_sms','4':'admin_edu_cloud_search'} %}
+                {% set array = {'0':'admin_my_cloud','1':'admin_cloud_video_setting','2':'admin_setting_cloud','3':'admin_edu_cloud_sms','4':'admin_edu_cloud_search','5':'admin_edu_cloud_attachment'} %}
                  {% if m.code not in  array or is_granted('ROLE_SUPER_ADMIN') %}
                             
                   {% if not menu_hiddens[m.code]|default(false)  %}
