--- a/src/Topxia/WebBundle/Resources/views/Theme/edit-groups-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Theme/edit-groups-modal.html.twig
@@ -1,7 +1,7 @@
 {% extends 'TopxiaWebBundle:Theme:edit-modal-layout.html.twig' %}
 
 {% block custom_count %}
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="col-sm-3 control-label">小组数量设置</label>
     <div class="col-sm-9">
       <select class="form-control width-input-large" name="count">
@@ -15,7 +15,7 @@
         <option value="8">8</option>
       </select>
     </div>
-  </div>
+  </div> -->
 {% endblock %}
 
 {% block custom_category_count %}
@@ -41,3 +41,5 @@
     </div>
   </div>
 {% endblock %}
+
+{% block custom_orderby %}{% endblock %}
